--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Welcome</title>
 </head>
 <body>
-    <h1 class="hello">Hello Microverse!</h1>
+    <h1 class="welcome">Hello Microverse!</h1>
 </body>
 </html>
